[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
bitflags = "0.9"
libc = "0.2"

[dependencies.gdk-sys]
path = "../gdk-sys"
version = "0.3.4"

[dependencies.gdk-pixbuf-sys]
path = "../gdk-pixbuf-sys"
version = "0.3.4"

[dependencies.gio-sys]
path = "../gio-sys"
version = "0.3.4"

[dependencies.gobject-sys]
path = "../gobject-sys"
version = "0.3.4"

[dependencies.pango-sys]
path = "../pango-sys"
version = "0.3.4"

[features]
v3_10 = ["v3_8"]
v3_12 = ["v3_10"]
v3_6 = []
v3_8 = ["v3_6"]

[lib]
name = "gdk_x11_sys"

[package]
build = "build.rs"
links = "gdk_x11"
name = "gdk-x11-sys"
version = "0.2.0"
